@@ -1,6 +1,10 @@
 Revision history for Mojolicious-Plugin-Gzip
 
 {{$NEXT}}
+        - Inherit from Mojolicious::Plugin instead of Mojolicious::Plugin::Config.
+        - Remove call to fix_headers.
+        - Fixed flakey tests by comparing the gunzipped text with the original text instead of comparing the gzipped text.
+        - Adding warning about how module is inefficient with large files.
 
 0.02  2019-03-24 22:33:20 CDT
         - Require Mojolicious 8.02.
